<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="Home" />

    <item android:title="Challenges">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/challenge_1"
                    android:title="@string/challenge_get_used_to_the_tools" />
                <item
                    android:id="@+id/challenge_2"
                    android:title="@string/challenge_hidden_things" />
                <item
                    android:id="@+id/challenge_3"
                    android:title="@string/challenge_logcat_output" />
                <item
                    android:id="@+id/challenge_4"
                    android:title="@string/challenge_basic_http_request" />
                <item
                    android:id="@+id/challenge_5"
                    android:title="@string/challenge_basic_https_request" />
                <item
                    android:id="@+id/challenge_6"
                    android:title="@string/challenge_ssl_pinning" />
                <item
                    android:id="@+id/challenge_7"
                    android:title="@string/challenge_authorised_area" />
                <item
                    android:id="@+id/challenge_8"
                    android:title="@string/challenge_auth_brute" />
                <item
                    android:id="@+id/challenge_9"
                    android:title="@string/challenge_root_detection_bypass" />
                <item
                    android:id="@+id/challenge_10"
                    android:title="@string/challenge_secure_encryption" />
                <item
                    android:id="@+id/challenge_11"
                    android:title="@string/challenge_library_call" />

            </group>
        </menu>
    </item>

    <item android:title="About">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="About Us" />
            <item
                android:id="@+id/nav_twitter"
                android:title="Twitter" />
            <item
                android:id="@+id/nav_wiki"
                android:title="Wiki" />
        </menu>
    </item>

</menu>
