<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/toolbar_padding_top">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/challenge_authorised_area_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_description"
            android:paddingBottom="@dimen/text_padding_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_password"
            android:hint="@string/challenge_password" />

        <Button
            android:text="@string/challenge_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button" />

        <TextView
            android:text="@string/challenge_authorised_area_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView_hint"
            android:paddingTop="@dimen/text_padding_top"/>


    </LinearLayout>

</LinearLayout>