<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/toolbar_padding_top">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/challenge_root_detection_bypass_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:paddingBottom="@dimen/text_padding_bottom"/>

        <Button
            android:text="@string/challenge_root_detection_bypass_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button" />

        <TextView
            android:text="@string/challenge_result_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_result_description"
            android:paddingTop="@dimen/text_padding_top" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/textView_result"
            android:background="@drawable/black"
            android:layout_height="match_parent"
            android:padding="4dp" />

    </LinearLayout>

</LinearLayout>